gobmkida/g2/location_to_string
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/engine/printutils.c:750:6: error: use of undeclared identifier 'init_1'
v1 = init_1; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/engine/printutils.c:752:7: error: use of undeclared identifier 'init_1'
if ( !init_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/engine/printutils.c:755:23: error: use of undeclared identifier 'buf_0'
for ( i = ( _BYTE *)( buf_0 + 1); ; i += 5 ) 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/engine/printutils.c:763:9: error: use of undeclared identifier 'buf_0'
strcpy( buf_0[0], "Pass"); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/engine/printutils.c:793:1: error: use of undeclared identifier 'init_1'
init_1 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/engine/printutils.c:805:8: error: use of undeclared identifier 'buf_0'
return buf_0[v2]; 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/location_to_string/src/obj/1/printutils.o] Error 1
